[iOS] Fix blank screen when entering tab grid.

The tab grid view doesn't relayout in time for the animation to use the layout information. This CL forces a layout earlier.

Additionally, the tab grid scroll position needs to be adjusted after the grid does its layout, not before. This CL moves that logic from -viewWillLayoutSubviews to -viewDidLayoutSubviews.

Bug: 863107
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Icb15780cb9a3b52f13fbe9d875cb0695e749b96b
Reviewed-on: https://chromium-review.googlesource.com/1145065
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576834}
Former-commit-id: 532527e25e9c040712d0623c308de2863e300204